[tool.poetry]
name = "brl"
version = "0.1.0"
description = "Beyond RL"
authors = ["Edilmo Palencia edilmo@gmail.com", "Abhik Singla abhiksingla10@gmail.com"]
readme = "README.md"
repository = "https://github.com/Traxpert/txp"
keywords = [
    "RL",
    "Offline RL",
    "NLP"
    ]
packages = [
    { include = "brl", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
tqdm = "^4.64.1"
plotly = "^5.11.0"
matplotlib = "^3.6.2"
protobuf = "^4.21.12"
scipy = "^1.9.3"
transformers = "^4.25.1"
datasets = "^2.7.1"
evaluate = "^0.4.0"
sentence-transformers = "^2.2.2"
tabulate = "^0.9.0"
scikit-multilearn = "^0.2.0"
click = "^8.1.3"
traitlets = "^5.7.1"
dynaconf = "^3.1.11"
setfit = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.3"
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"
pytest-cov = "^4.0.0"
jupyterlab = "^3.5.1"
nbmake = "^1.3.5"
pytest-mock = "^3.10.0"
coverage = {version = "^7.0.0", extras = ["toml"]}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["c4v"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
